Updates are done on keywords

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
+<head>
+<title>Colors Palette</title>
+<link rel="shortcut icon" type="image/png" href="cp.png" />
+ <link rel="icon" type="image/png" href="cp.png" />	
+ <meta name="keywords" content="color palette, colors palette, hexa colors, hexa, color picker, flat colors, bootflat, unique colors">
+
+</head>
 <link rel="stylesheet" type="text/css" href="colors.css">
+
 <body>
 <header>
 	<nav>
